# robolab20252

ExamenParcial1/: Examen.ipynb  Examen.md  Examen.mlx
ExamenParcial2/: SegundoParcial.ipynb
ExamenParcial2/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ExamenParcial2/ros2_ws/install/scara_control/share/scara_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml
ExamenParcial2/ros2_ws/install/scara_control/share/scara_control/config/: scara_controllers.yaml
ExamenParcial2/ros2_ws/install/scara_control/share/scara_control/launch/: execute_trajectory.launch.py
ExamenParcial2/ros2_ws/log/: latest_build  latest_list
ExamenParcial2/ros2_ws/src/scara_bring_up/: CMakeLists.txt  package.xml
ExamenParcial2/ros2_ws/src/scara_bringup/: package.xml  setup.cfg  setup.py
ExamenParcial2/ros2_ws/src/scara_bringup/config/: scara_controllers.yaml
ExamenParcial2/ros2_ws/src/scara_bringup/launch/: bringup.launch.py  scara_control.launch.py
ExamenParcial2/ros2_ws/src/scara_bringup/lib/scara_bringup/: mobile_control  scara_test  scara_tray_line
ExamenParcial2/ros2_ws/src/scara_bringup/scara_bringup/: initial_joint_state_publisher_py.py  scara_tray_line_py.py
ExamenParcial2/ros2_ws/src/scara_bringup/scara_bringup/config/: scara_controllers.yaml
ExamenParcial2/ros2_ws/src/scara_bringup/worlds/: scara_world.sdf
ExamenParcial2/ros2_ws/src/scara_bringup/worlds/scara_world/: model.sdf
ExamenParcial2/ros2_ws/src/scara_control/: setup.cfg  setup.py
ExamenParcial2/ros2_ws/src/scara_control/config/: scara_controllers.yaml
ExamenParcial2/ros2_ws/src/scara_control/scara_control/: scara_tray_line_py.py
ExamenParcial2/ros2_ws/src/scara_description/: CMakeLists.txt  package.xml
ExamenParcial2/ros2_ws/src/scara_description/urdf/: scara.urdf
Practica1/: Reporte_Practica1.ipynb
Practica1/.ipynb_checkpoints/: Reporte_Practica1-checkpoint.ipynb
Practica1/ros2_ws/install/: local_setup.sh  setup.sh
Practica1/ros2_ws/log/: latest_build  latest_list
Practica1/ros2_ws/practica_1/: CMakeLists.txt
Practica1/ros2_ws/practica_1/launch/: robot_prismatic_launch.py
Practica1/ros2_ws/practica_1/urdf/: robot_prismatic.urdf  robot_revolute.urdf
Practica1/ros2_ws/practica_1/urdf/.ipynb_checkpoints/: robot_prismatic-checkpoint.urdf
install/: local_setup.sh  setup.sh
install/scara_bringup/share/scara_bringup/: package.dsv  package.sh
install/scara_control/lib/scara_control/: scara_tray_line
install/scara_control/share/scara_control/: package.dsv  package.ps1  package.sh  package.zsh
install/scara_description/share/scara_description/: package.sh
log/: latest_build
(+51 files in other folders)
