<?xml version="1.0"?>
<package format="3">
  <name>scara_bringup</name>
  <version>0.0.0</version>
  <description>Bringup del SCARA: URDF + RViz</description>
  <maintainer email="lgmarin02@hotmail.com">sr-gus</maintainer>
  <license>MIT</license>

  <!-- Build-tool para Python -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencias de ejecución -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control_node</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <export>
    <!-- Indica a colcon que es un paquete Python -->
    <build_type>ament_python</build_type>
  </export>
</package>
