<?xml version="1.0"?>
<package format="3">
  <name>scara_control</name>
  <version>0.0.0</version>
  <description>Algoritmos de control para SCARA</description>
  <maintainer email="lgmarin02@hotmail.com">sr-gus</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
